# vcif-rdf

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: spec.md
docs/examples/: agda-import.ttl  hf-dbe-closure.ttl
src/vcif_rdf/: __init__.py  cli.py  importer.py  kquery.py  ontology_loader.py  validator.py
src/vcif_rdf/ontology/: LICENSE  carrier.ttl
src/vcif_rdf/ontology/profiles/: closure-report.ttl  patch.ttl  recognizer-package.ttl  residue-report.ttl  snapshot.ttl  vocabulary.ttl
src/vcif_rdf/queries/: kquery.rq
src/vcif_rdf/shapes/: carrier-form.ttl  carrier-self-hosting.ttl
src/vcif_rdf/tests/: conftest.py  test_examples.py  test_geometric_currying_carrier.py  test_kquery.py  test_ontology.py  test_validator.py
